--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,2 +1,133 @@
+"$schema" = 'https://starship.rs/config-schema.json'
+
+[custom.shell]
+command = "echo $STARSHIP_SHELL"
+when = """ test "$STARSHIP_SHELL" != "zsh" """
+style = "dimmed blue"
+format = "[ $output]($style)"
+shell = ["bash"]
+
+# [git_status]
+# untracked = '[ $count](bold yellow) '
+# staged = '[ $count](bold green) '
+# stashed = "[ ](cyan) "
+# deleted = '[ $count](bold red) '
+# modified= '[ $count](bold blue) '
+# behind = '[ ](bold purple) '
+# ahead = '[ ](bold purple) '
+# format = '([$all_status$ahead_behind]($style))'
+
+# [git_metrics]
+# disabled = false
+
+[git_branch]
+symbol = " "
+
+[lua]
+detect_folders = []
+symbol = " "
+
+[aws]
+symbol = " "
+
+[buf]
+symbol = " "
+
+[c]
+symbol = " "
+
+[conda]
+symbol = " "
+
+[dart]
+symbol = " "
+
+[directory]
+read_only = " 󰌾"
+
+[docker_context]
+symbol = " "
+
+[elixir]
+symbol = " "
+
+[elm]
+symbol = " "
+
+[golang]
+symbol = " "
+
+[guix_shell]
+symbol = " "
+
+[haskell]
+symbol = " "
+
+[haxe]
+symbol = " "
+
+[hostname]
+ssh_symbol = " "
+
+[java]
+symbol = " "
+
+[julia]
+symbol = " "
+
+[memory_usage]
+symbol = "󰍛 "
+
+[meson]
+symbol = "󰔷 "
+
+[nim]
+symbol = "󰆥 "
+
+[nix_shell]
+symbol = " "
+
+[nodejs]
+symbol = " "
+
 [package]
 disabled = true
+
+[python]
+symbol = " "
+
+[rlang]
+symbol = "󰟔 "
+
+[ruby]
+symbol = " "
+
+[rust]
+symbol = " "
+
+[scala]
+symbol = " "
+
+[spack]
+symbol = "🅢 "
+
+[os.symbols]
+Alpine = " "
+Amazon = " "
+Android = " "
+Arch = " "
+Artix = " "
+CentOS = " "
+Debian = " "
+EndeavourOS = " "
+Fedora = " "
+Linux = " "
+Manjaro = " "
+Mint = " "
+NixOS = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+Pop = " "
+SUSE = " "
+Ubuntu = " "
+Unknown = " "
