--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "nvim/.config/nvim"]
-	path = nvim/.config/nvim
+[submodule "nvim"]
+	path = nvim
 	url = git@github.com:salloom-domani/nvim.git
