--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,13 @@ bind r source-file ~/.config/tmux/tmux.conf \; display-message "Reloaded!"
 set -g base-index 1
 set -g renumber-windows on
 
+# Shift Alt vim keys to switch windows
+bind -n C-H previous-window
+bind -n C-L next-window
+
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @plugin "dreamsofcode-io/catppuccin-tmux"
 
@@ -23,3 +28,10 @@ if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
