--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,12 +2,30 @@ set -g prefix C-a
 
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Reloaded!"
 
+bind-key "K" display-popup -E -w 40% "sesh connect \"$(
+ sesh list -i | gum filter --limit 1 --no-sort --fuzzy --placeholder 'Pick a sesh' --height 50 --prompt='⚡'
+)\""
+
+bind-key "T" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 55%,60% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+)\""
+
+bind -N "last-session (via sesh) " L run-shell "sesh last"
+bind -N "switch to root session (via sesh) " 9 run-shell "sesh connect --root \'$(pwd)\'"
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+
 set -g base-index 1
 set -g renumber-windows on
 
-# Shift Alt vim keys to switch windows
-bind -n C-H previous-window
-bind -n C-L next-window
 
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
@@ -15,12 +33,14 @@ set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @plugin "dreamsofcode-io/catppuccin-tmux"
 
-set -g @continuum-restore "on"
+set -g @yank_with_mouse off
+
+set -g @continuum-restore on
 set -g @resurrect-strategy-nvim "session"
 
 set -g mouse on
 set -gq allow-passthrough on
-set -g default-terminal "screen-256color"
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
 
 setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
